      valueNodeName: string; valueNodeTextContent: string): boolean;
 * Execwith: if there is a parameter '/HookScript <path to script file>',
   then the existing 'script file' will be called with the temporary file
   as parameter before passing it to the interpreter.
   The call of the hookscript has a 40 sec Timeout
 * osfunc: additional log at FileCheckDate
 * DPI awareness True/PM_V2
 * osparser: doAktionen: FBatchOberflaeche.LoadSkin(''); and Processmess to reload DPI scaling
 * osparser: execPowershellCall has now additionl parameter optionstr that may hold additional
    execwith parameters
 * osparser: getDecimalCompareSign (used by compareDotSeperatedNumbers):
     now support leading zeros (then it will handled as float starting with 0.)
     now support a letter as last part of the number (1.0.23b like is used at openssl versions)
 * osparser: executewith: call powershell scripts with -file parameter in order to get the correct exitcode
 * osparser: fix Access Violation in CreateAndProcessScript on empty scriptfiles.

-- d.oertel <d.oertel@uib.de> Tue, 31 Aug 2021 15:00

opsi-script (4.12.4.27) stable; urgency=low

 * new generic section parameter /AllUserProfiles (as alias for /AllNTUserProfiles)
 * osxmlsections: fixes for creating not existing file
 * osparser: doXMLPatcg2Main: check acces rights and for successful savetofile
 * osparser: handleFileExists32: fileexists for win also via shlwapi.PathFileExistsW
 * new unit oswinacl with function AddAccessRightsToACL
 * osfunc: FileGetWriteAccess calls at windows also AddAccessRightsToACL
 * osencoding: saveTextFileWithEncoding: ForceDirectories for output
 * osfunc: toCopyOrNotToCopy: fix for copy -r

-- d.oertel <d.oertel@uib.de> Thu, 12 Aug 2021 15:00

opsi-script (4.12.4.26) stable; urgency=low

 * Parameter 'pcprofil' not supported any more
 * osencoding: new function  isPlainAsciiString(const searchText: string): boolean;
 * osencoding: func searchEncoding now detectd also isPlainAscii