@@ -16,6 +16,7 @@ opsi-script (4.12.4.28) stable; urgency=low
    as parameter before passing it to the interpreter.
    The call of the hookscript has a 40 sec Timeout
  * osfunc: additional log at FileCheckDate
+ * osfuncwin: WinIsUefi uses new function GetBiosMode if Windows Verison >= Windows10 2004. This function calls the Windows API function GetFirmwareType to detect Bios mode
  * DPI awareness True/PM_V2
  * osparser: doAktionen: FBatchOberflaeche.LoadSkin(''); and Processmess to reload DPI scaling
  * osparser: execPowershellCall has now additionl parameter optionstr that may hold additional
